--- a/css/Top_meny.css
+++ b/css/Top_meny.css
@@ -1,9 +1,10 @@
 .Top_meny{
     background-color: rgb(155, 155, 155);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-top: -2%;
+    margin-top: -5%;
     margin-left: -0.6%;
     margin-right: -0.6%;
+    z-index: 3;
 }
 
 .Meny_länkar{
@@ -22,12 +23,14 @@ body{
 }
 
 #Meny_logo{
-    margin: 2%;
+    width: 25%;
+    height:15%;
+    margin: 4%;
     float: left;
 }
 
 #Home_page{
-    margin-top: 2.5%;
+    margin-top: 6%;
     padding-top: 2%;
     padding-left: 8%;
     padding-right: 8%;
@@ -35,14 +38,14 @@ body{
 }
 
 #Search_movies_page{
-    margin-top: 2.5%;
+    margin-top: 6%;
     padding-left: 8%;
     padding-right: 8%;
     background-color:  rgb(145, 145, 145);
 }
 
 #Contact_information_page{
-    margin-top: 2.5%;
+    margin-top: 6%;
     padding-left: 6.5%;
     padding-right: 6.5%;
     background-color: rgb(145, 145, 145);
